--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <!-- <script src="destructuring.js"></script> -->
  <!-- <script src="spreadOperator.js"></script> -->
  <!-- <script src="restOperator.js"></script> -->
-<script type="module" src="return.js"></script>
+<!-- <script type="module" src="return.js"></script> -->
+ <script src="HOF.js"></script>
 </html>
